--- a/style.css
+++ b/style.css
@@ -4,10 +4,63 @@ body {
     background-size: cover;
 }
 
+#container {
+    display: flex;
+    height: 100%;
+}
+
 #map {
-    display: block;
-    margin-top: 8%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 55%;
+    display: flex;
+    justify-content: center;
+}
+
+#title {
+    text-align: center;
+    font-family: "Papyrus", fantasy;
+}
+
+#left {
+    width:  25%;
+    height: 100%;
+    margin-left: 20px;
+    position: relative;
+}
+#right {
+    width:  25%;
+    height: 100%;
+    margin-left: 20px;
+    position: relative;
+}
+
+
+#left-list {
+    position: relative;
+    max-width: 300px;
+    margin-left: 15px;
+    border: 2px solid black;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.2);
+    list-style: none;
+    font-family: "Papyrus", fantasy;
+    font-size: 50px;
+}
+
+#right-list {
+    position: relative;
+    max-width: 300px;
+    margin-left: 15px;
+    border: 2px solid black;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.2);
+    list-style: none;
+    font-family: "Papyrus", fantasy;
+    font-size: 50px;
+}
+
+li {
+    margin-left: 50px;
+}
+
+#map-text {
+    position: absolute;
 }
