--- a/style.css
+++ b/style.css
@@ -9,10 +9,40 @@ body {
     height: 100%;
 }
 
-#map {
+#box {
     display: flex;
-    justify-content: center;
+    align-items: flex-start;
+    height: 700px;
+    width: 900px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid black;  
 }
+
+#location {
+    margin-left: 80px;
+    font-size: 35px;
+    font-family: "Papyrus", fantasy;
+
+}
+
+#flag {
+    max-width: 300px;
+    padding: 5px;
+    border: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+#attractions {
+    margin-left: 80px;
+    text-align: center;
+    font-family: "Papyrus", fantasy;
+}
+
+#attractions li {
+    list-style: none;
+}
+
+
 
 #title {
     text-align: center;
@@ -32,14 +62,11 @@ body {
     position: relative;
 }
 
-
+/* 
 #left-list {
     position: relative;
     max-width: 300px;
     margin-left: 15px;
-    border: 2px solid black;
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 0.2);
     list-style: none;
     font-family: "Papyrus", fantasy;
     font-size: 50px;
@@ -49,18 +76,24 @@ body {
     position: relative;
     max-width: 300px;
     margin-left: 15px;
-    border: 2px solid black;
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 0.2);
     list-style: none;
     font-family: "Papyrus", fantasy;
     font-size: 50px;
+} */
+
+#left-flag {
+    max-width: 300px;
+    margin: 5px;
+    padding: 5px;
+    border: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
-li {
-    margin-left: 50px;
+#right-flag {
+    max-width: 300px;
+    margin: 5px;
+    padding: 5px;
+    border: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
-#map-text {
-    position: absolute;
-}
