--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     padding-top: 10px;
     font-weight: bold;
     font-size: 18px;
-    color: #29b594
+    color: #28846e
 }
 #island-info li{
     padding: 15px;
