--- a/style.css
+++ b/style.css
@@ -3,94 +3,91 @@ body {
     background-image: url(assets/background.png);
     background-size: cover;
 }
-
 #container {
     display: flex;
     height: 100%;
 }
-
 #box {
     display: flex;
     align-items: flex-start;
     height: 700px;
     width: 900px;
     background-color: rgba(255, 255, 255, 0.5);
-    border: 2px solid black;  
+    border: 2px solid black;
 }
-
 #row2 {
     flex-grow: 1;
 }
-
 #location {
     text-align: start;
     margin-left: 50px;
     font-size: 35px;
     font-family: "Papyrus", fantasy;
-
+    color: rgb(246, 198, 6)
 }
-
 #flag {
     max-width: 300px;
     padding: 5px;
     border: 2px solid black;
     background-color: rgba(255, 255, 255, 0.2);
 }
-
 #attractions {
-    margin-right: 200px;
+    margin-right: -120px;
     text-align: center;
     font-family: "Papyrus", fantasy;
+    font-weight: bold;
+    font-size: 25px;
+    color: rgb(128, 51, 6);
 }
-
 #attractions li {
     list-style: none;
 }
-
 #island-info {
     align-self: center;
     padding-top: 10px;
+    font-weight: bold;
+    font-size: 18px;
+    color: #28846E
 }
 #island-info li{
     padding: 15px;
     font-family: "Papyrus", fantasy;
     font-size: 20px;
+    font-weight: bold;
+    font-size: 18px;
 }
-
 #comments {
     align-self: center;
     margin-left: 35px;
     margin-top: 100px;
     font-family: "Papyrus", fantasy;
     flex-grow: 1;
+    font-weight: bold;
+    font-size: 25px;
 }
-
 #comment-form {
     margin-left: 5px;
     margin-top: 10px;
     align-self: flex-end;
     font-family: "Papyrus", fantasy;
-    
+    color: #B5298B
 }
-
 #comment-input {
     background-color: rgba(255, 255, 255, 0.2);
     height: 90px;
 }
-
 #comments li {
     list-style: none;
     margin: 2px;
     font-family: "Papyrus", fantasy;
+    color: #29B53E
 }
-
-
-
 #title {
     text-align: center;
     font-family: "Papyrus", fantasy;
+    color: rgb(99, 4, 4);
+    font-weight: bold;
 }
-
 #left {
     width:  25%;
     height: 100%;
@@ -103,8 +100,7 @@ body {
     margin-left: 20px;
     position: relative;
 }
-
-/* 
+/*
 #left-list {
     position: relative;
     max-width: 300px;
@@ -113,7 +109,6 @@ body {
     font-family: "Papyrus", fantasy;
     font-size: 50px;
 }
-
 #right-list {
     position: relative;
     max-width: 300px;
@@ -122,7 +117,6 @@ body {
     font-family: "Papyrus", fantasy;
     font-size: 50px;
 } */
-
 #left-flag {
     max-width: 300px;
     margin: 5px;
@@ -130,7 +124,6 @@ body {
     border: 2px solid black;
     background-color: rgba(255, 255, 255, 0.2);
 }
-
 #right-flag {
     max-width: 300px;
     margin: 5px;
@@ -138,4 +131,3 @@ body {
     border: 2px solid black;
     background-color: rgba(255, 255, 255, 0.2);
 }
-
